regression/negative/duplicated_label.asm
        device zxspectrum128

        org #8000
lab     nop
lab     ret
